feat: add new GitHub and Ragie webhook templates for various events
Introduce a comprehensive set of webhook templates for GitHub events including push, pull request, issues, and installation events, as well as Ragie events for document status updates, connection sync, and entity extraction. Each template includes method, headers, and body structure to facilitate integration with respective services.

--- a/templates/github/github-installation.jsonc
+++ b/templates/github/github-installation.jsonc
@@ -11,11 +11,11 @@
     },
     {
       "key": "X-GitHub-Delivery",
-      "value": "d4e5f6a7-b8c9-0123-def0-456789012345"
+      "value": "$uuid"
     },
     {
       "key": "X-Hub-Signature-256",
-      "value": "placeholder"
+      "value": "$github:x-hub-signature-256"
     },
     {
       "key": "X-GitHub-Hook-ID",
