--- a/templates/github/github-installation_repositories.jsonc
+++ b/templates/github/github-installation_repositories.jsonc
@@ -11,11 +11,11 @@
     },
     {
       "key": "X-GitHub-Delivery",
-      "value": "e5f6a7b8-c9d0-1234-ef01-567890123456"
+      "value": "$uuid"
     },
     {
       "key": "X-Hub-Signature-256",
-      "value": "placeholder"
+      "value": "$github:x-hub-signature-256"
     },
     {
       "key": "X-GitHub-Hook-ID",
