--- a/templates/github/github-issues.jsonc
+++ b/templates/github/github-issues.jsonc
@@ -11,11 +11,11 @@
     },
     {
       "key": "X-GitHub-Delivery",
-      "value": "c3d4e5f6-a7b8-9012-cdef-345678901234"
+      "value": "$uuid"
     },
     {
       "key": "X-Hub-Signature-256",
-      "value": "placeholder"
+      "value": "$github:x-hub-signature-256"
     },
     {
       "key": "User-Agent",
