--- a/templates/github/github-pull_request.jsonc
+++ b/templates/github/github-pull_request.jsonc
@@ -11,11 +11,11 @@
     },
     {
       "key": "X-GitHub-Delivery",
-      "value": "b2c3d4e5-f6a7-8901-bcde-f23456789012"
+      "value": "$uuid"
     },
     {
       "key": "X-Hub-Signature-256",
-      "value": "placeholder"
+      "value": "$github:x-hub-signature-256"
     },
     {
       "key": "User-Agent",
