--- a/templates/github/github-push.jsonc
+++ b/templates/github/github-push.jsonc
@@ -11,11 +11,11 @@
     },
     {
       "key": "X-GitHub-Delivery",
-      "value": "a1b2c3d4-e5f6-7890-abcd-ef1234567890"
+      "value": "$uuid"
     },
     {
       "key": "X-Hub-Signature-256",
-      "value": "placeholder"
+      "value": "$github:x-hub-signature-256"
     },
     {
       "key": "User-Agent",
