feat: update package.json and turbo.json for improved script management and environment variables
Enhance the package.json by adding new scripts for linting, type checking, and release processes, while updating the format check to include additional file types. Modify turbo.json to include new global environment variables and adjust task inputs for linting and testing. Introduce a new GolangCI configuration for the webhook CLI Go application to standardize linting practices.

--- a/apps/webhook-cli-go/turbo.json
+++ b/apps/webhook-cli-go/turbo.json
@@ -9,7 +9,13 @@
     },
     "lint": {
       "dependsOn": [],
-      "inputs": ["$TURBO_DEFAULT$", "go.mod", "go.sum", "**/*.go"]
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        "go.mod",
+        "go.sum",
+        ".golangci.yml",
+        "**/*.go"
+      ]
     },
     "check-types": {
       "dependsOn": [],
