--- a/apps/webhook-cli-go/package.json
+++ b/apps/webhook-cli-go/package.json
@@ -4,13 +4,16 @@
   "version": "0.0.0",
   "description": "Local-only Go CLI experiment for better-webhook",
   "scripts": {
-    "lint": "go vet ./...",
+    "install": "go mod tidy",
+    "lint": "golangci-lint run ./...",
+    "format:check": "test -z \"$(goimports -l -local github.com/endalk200/better-webhook .)\"",
+    "format:write": "goimports -w -local github.com/endalk200/better-webhook . && gofumpt -w .",
     "check-types": "go test ./... -run=^$",
     "test": "go test ./...",
     "test:race": "go test ./... -race",
     "test:cover": "go test ./... -coverprofile=coverage.out -covermode=atomic",
     "test:e2e": "go test ./e2e -tags=e2e",
-    "build": "VERSION=${VERSION:-$(git describe --tags --always --dirty)} && mkdir -p bin && go build -ldflags \"-X github.com/endalk200/better-webhook/apps/webhook-cli-go/internal/version.Version=${VERSION}\" -o bin/better-webhook ./cmd/better-webhook",
+    "build": "mkdir -p bin && go build -ldflags \"-X github.com/endalk200/better-webhook/apps/webhook-cli-go/internal/version.Version=${VERSION}\" -o bin/better-webhook ./cmd/better-webhook",
     "clean": "rm -rf bin"
   }
 }
