--- a/apps/webhook-cli-go/package.json
+++ b/apps/webhook-cli-go/package.json
@@ -13,7 +13,7 @@
     "test:race": "go test ./... -race",
     "test:cover": "go test ./... -coverprofile=coverage.out -covermode=atomic",
     "test:e2e": "go test ./e2e -tags=e2e",
-    "build": "mkdir -p bin && go build -ldflags \"-X github.com/endalk200/better-webhook/apps/webhook-cli-go/internal/version.Version=${VERSION}\" -o bin/better-webhook ./cmd/better-webhook",
+    "build": "mkdir -p bin && go build -ldflags \"-X github.com/endalk200/better-webhook/apps/webhook-cli-go/internal/version.Version=${VERSION:-dev}\" -o bin/better-webhook ./cmd/better-webhook",
     "clean": "rm -rf bin"
   }
 }
