--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "tsc --noEmit",
+    "lint": "eslint .",
     "check-types": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -62,10 +62,12 @@
     "reflect-metadata": "^0.1.13 || ^0.2.0"
   },
   "devDependencies": {
+    "@better-webhook/eslint-config": "workspace:*",
     "@better-webhook/typescript-config": "workspace:*",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@types/node": "^24.3.1",
+    "eslint": "^9.35.0",
     "reflect-metadata": "^0.2.2",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
