--- a/apps/examples/express-example/package.json
+++ b/apps/examples/express-example/package.json
@@ -8,6 +8,7 @@
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts",
     "build": "echo 'No build needed for example'",
+    "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
@@ -19,9 +20,11 @@
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@better-webhook/eslint-config": "workspace:*",
     "@better-webhook/typescript-config": "workspace:*",
     "@types/express": "^5.0.0",
     "@types/node": "^24.3.1",
+    "eslint": "^9.35.0",
     "tsx": "^4.20.5",
     "typescript": "^5.6.3"
   },
