--- a/apps/webhook-cli/package.json
+++ b/apps/webhook-cli/package.json
@@ -22,7 +22,7 @@
     "build:binary:all": "bun ./scripts/build-binary.ts --all",
     "dev": "tsup --watch",
     "start": "tsx src/index.ts",
-    "lint": "tsc",
+    "lint": "eslint .",
     "test": "vitest run",
     "prepublishOnly": "pnpm run build",
     "prepare": "pnpm run build:cli"
@@ -72,12 +72,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@better-webhook/eslint-config": "workspace:*",
     "@better-webhook/typescript-config": "workspace:*",
     "@types/bun": "^1.2.18",
     "@types/express": "^4.17.21",
     "@types/node": "^24.3.1",
     "@types/prompts": "^2.4.9",
     "@types/ws": "^8.5.12",
+    "eslint": "^9.35.0",
     "tsup": "^8.5.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
