--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "tsc --noEmit",
+    "lint": "eslint .",
     "check-types": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -59,9 +59,11 @@
     "express": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
+    "@better-webhook/eslint-config": "workspace:*",
     "@better-webhook/typescript-config": "workspace:*",
     "@types/express": "^5.0.0",
     "@types/node": "^24.3.1",
+    "eslint": "^9.35.0",
     "express": "^4.21.2",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
