chore: update type checking scripts and enhance replay store documentation
Modify the type checking command in package.json for the Next.js example to include type generation. Update the webhook CLI and webhook CLI Go package.json files to ensure consistent type checking commands. Additionally, add documentation comments to clarify the behavior of the custom replay store in the Ragie webhook route.

--- a/apps/examples/nextjs-example/package.json
+++ b/apps/examples/nextjs-example/package.json
@@ -9,7 +9,7 @@
     "build": "echo 'No build needed for example'",
     "start": "next start -p 3002",
     "lint": "eslint .",
-    "check-types": "tsc --noEmit"
+    "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
     "@better-webhook/core": "workspace:*",
