--- a/apps/webhook-cli/package.json
+++ b/apps/webhook-cli/package.json
@@ -23,6 +23,7 @@
     "dev": "tsup --watch",
     "start": "tsx src/index.ts",
     "lint": "eslint .",
+    "check-types": "tsc --noEmit",
     "test": "vitest run",
     "prepublishOnly": "pnpm run build",
     "prepare": "pnpm run build:cli"
