chore: update GitHub workflows for improved CI processes
Refactor the changeset-check workflow to ensure proper base branch reference fetching. Modify the CodeQL workflow to streamline Go setup and adjust build mode handling. Update the release workflow to conditionally push tags based on changeset publication status. Revise the security workflow to replace the Trivy SARIF report generation with a filesystem scan and enhance environment variable handling for better configuration management.

--- a/.github/workflows/changeset-check.yml
+++ b/.github/workflows/changeset-check.yml
@@ -21,7 +21,7 @@ jobs:
         run: devbox run -- just ci-install
 
       - name: Ensure base branch ref exists
-        run: git fetch --no-tags --prune --depth=1 origin "${{ github.base_ref }}:refs/remotes/origin/${{ github.base_ref }}"
+        run: git fetch --no-tags --depth=1 origin "refs/heads/${{ github.base_ref }}:refs/remotes/origin/${{ github.base_ref }}"
 
       - name: Check for changesets
         env:
