--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,4 +73,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push tags
+        if: steps.changesets.outputs.published == 'true'
         run: git push --tags
