--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,9 +29,10 @@ jobs:
       # Recommended: Ensure the Go environment is ready for the Go matrix leg
       - name: Set up Go
         if: matrix.language == 'go'
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6.2.0
         with:
           go-version-file: apps/webhook-cli-go/go.mod
+          cache-dependency-path: apps/webhook-cli-go/go.mod
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
