--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,24 @@
-name: Release
+name: Release SDK Packages
 
 on:
   push:
     branches: [main]
+    paths:
+      - ".changeset/**"
+      - "packages/**"
+      - "package.json"
+      - "pnpm-lock.yaml"
+      - "pnpm-workspace.yaml"
+      - "justfile"
+      - ".github/workflows/release.yml"
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
 
 jobs:
   release:
-    name: Release
+    name: Publish SDK packages via changesets
     runs-on: ubuntu-latest
     permissions:
       contents: write
