--- a/apps/webhook-cli/package.json
+++ b/apps/webhook-cli/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@better-webhook/cli",
+  "name": "@better-webhook/cli-go",
   "private": true,
   "version": "0.0.0",
-  "description": "Go-based CLI for local webhook capture, replay, and template workflows.",
+  "description": "Internal Go module package for the better-webhook CLI.",
   "scripts": {
     "install": "go mod tidy",
     "lint": "golangci-lint run ./...",
