chore: update GoReleaser configuration and pnpm-lock.yaml for CLI packages
This commit modifies the GoReleaser configuration to use single quotes in the name template for binary naming. Additionally, it updates the pnpm-lock.yaml file by restructuring optional dependencies for the CLI packages to use workspace references, ensuring better integration and management of platform-specific binaries.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,7 +30,7 @@ archives:
       - better-webhook
     formats:
       - binary
-    name_template: "{{ .Binary }}-{{ .Os }}-{{ if eq .Arch \"amd64\" }}x64{{ else }}{{ .Arch }}{{ end }}{{ .Ext }}"
+    name_template: '{{ .Binary }}-{{ .Os }}-{{ if eq .Arch "amd64" }}x64{{ else }}{{ .Arch }}{{ end }}{{ .Ext }}'
 
 checksum:
   name_template: checksums.txt
