--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,10 +33,10 @@
     "node": ">=18"
   },
   "optionalDependencies": {
-    "@better-webhook/cli-darwin-arm64": "0.0.0-dev",
-    "@better-webhook/cli-darwin-x64": "0.0.0-dev",
-    "@better-webhook/cli-linux-arm64": "0.0.0-dev",
-    "@better-webhook/cli-linux-x64": "0.0.0-dev",
-    "@better-webhook/cli-windows-x64": "0.0.0-dev"
+    "@better-webhook/cli-darwin-arm64": "workspace:*",
+    "@better-webhook/cli-darwin-x64": "workspace:*",
+    "@better-webhook/cli-linux-arm64": "workspace:*",
+    "@better-webhook/cli-linux-x64": "workspace:*",
+    "@better-webhook/cli-windows-x64": "workspace:*"
   }
 }
